infrastructure/configs/traefik/gateway.yml
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: contour
spec:
  controllerName: projectcontour.io/gateway-controller
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: traefik
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  gatewayClassName: traefik
  listeners:    
    #internal
    - name: internal-https
      hostname: "replaced.by.env"
      port: 8443
      protocol: HTTPS
      tls:
        mode: Terminate
      allowedRoutes:
        namespaces:
          from: All
    # external
    - name: external-https
      hostname: "replaced.by.env"
      port: 8444
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: ${domain}
      allowedRoutes:
        namespaces:
          from: All
    # passtrough internal
    - name: passtrough-internal
      hostname: "unifi.dev.${domain}"
      port: 8443
      protocol: HTTPS
      tls:
        mode: Passthrough
        certificateRefs:
          - name: ${env}.${domain}
      allowedRoutes:
        namespaces:
          from: All
